--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,13 @@
             "email": "tbanov@despark.com"
         }
     ],
+    "require": {
+        "php": ">=5.4.0",
+        "illuminate/auth": "5.1.*",
+        "illuminate/support": "5.1.*",
+        "illuminate/routing": "5.1.*",
+        "illuminate/database": "5.1.*"
+    },
     "autoload": {
         "psr-4": {
           "Despark\\LaravelDbLocalizationServiceProvider\\": "src/"
