--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Despark\\LaravelDbLocalization\\": ""
+            "Despark\\LaravelDbLocalization\\": "src/"
         }
     },
     "minimum-stability": "stable"
