--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,16 @@
     "description": "Database localization package for laravel framework",
     "keywords": ["framework", "laravel", "despark", "localization", "database"],
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Tihomir Banov",
-            "email": "tbanov@despark.com"
-        }
-    ],
+    "authors": [{
+        "name": "Tihomir Banov",
+        "email": "tbanov@despark.com"
+    }],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/auth": "5.1.*",
-        "illuminate/support": "5.1.*",
-        "illuminate/routing": "5.1.*",
-        "illuminate/database": "5.1.*"
+        "illuminate/auth": "^5.1",
+        "illuminate/support": "^5.1",
+        "illuminate/routing": "^5.1",
+        "illuminate/database": "^5.1"
     },
     "autoload": {
         "psr-4": {
