--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,20 @@
 {
     "name": "despark/laravel-db-localization",
     "description": "Database localization package for laravel framework",
-    "keywords": ["framework", "laravel", "despark", "localization", "database"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "despark",
+        "localization",
+        "database"
+    ],
     "license": "MIT",
-    "authors": [{
-        "name": "Tihomir Banov",
-        "email": "tbanov@despark.com"
-    }],
+    "authors": [
+        {
+            "name": "Tihomir Banov",
+            "email": "tbanov@despark.com"
+        }
+    ],
     "require": {
         "php": ">=5.4.0",
         "illuminate/auth": "^5.1",
@@ -14,10 +22,14 @@
         "illuminate/routing": "^5.1",
         "illuminate/database": "^5.1"
     },
+    "require-dev": {
+        "corneltek/phprelease": "^1.3"
+    },
     "autoload": {
         "psr-4": {
             "Despark\\LaravelDbLocalization\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "version": "0.0.1"
 }
