--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,33 @@
         {
             "name": "Tihomir Banov",
             "email": "tbanov@despark.com"
+        },
+        {
+            "name": "Ludmil Simeonov",
+            "email": "lsimeonov@despark.com"
+        },
+        {
+            "name": "Anton Geshev",
+            "email": "ageshev@despark.com"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/auth": "5.1.*",
-        "illuminate/support": "5.1.*",
-        "illuminate/routing": "5.1.*",
-        "illuminate/database": "5.1.*"
+        "php": ">=7.0",
+        "illuminate/support": "5.4.*",
+        "illuminate/routing": "5.4.*",
+        "illuminate/database": "5.4.*"
+    },
+    "require-dev": {
+        "graham-campbell/testbench": "^3.2"
     },
     "autoload": {
         "psr-4": {
             "Despark\\LaravelDbLocalization\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Despark\\Tests\\LaravelDbLocalization\\": "tests/"
         }
     },
     "minimum-stability": "stable"
