--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         "illuminate/database": "5.4.*"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.2"
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.7",
+        "graham-campbell/testbench": "^3.2",
+        "orchestra/database": "v3.4.0-BETA1"
     },
     "autoload": {
         "psr-4": {
